# acrocord

./: .coveragerc  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  project.toml  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  setup.py
.github/workflows/: coverage.yml  publish.yaml  pylint.yml  pytest.yml
acrocord/: __init__.py  databasepg.py
acrocord/factory/: __init__.py  table.py
acrocord/misc/: execution.py
acrocord/test/: __init__.py  constraints.py
acrocord/utils/: auxiliaries.py  cache.py  connect.py  getpassword.py  insert.py  logger.py  monitoring.py  privileges.py  types.py
doc/: IntegrationTableGuide.md  database_deployment.md  postgis.md
test/: __init__.py  conftest.py  test_auxiliaries.py  test_cache.py  test_connect.py  test_constraints.py  test_databasepg.py  test_logger.py  test_misc.py  test_privileges.py  test_table_factory.py
